Fixed contact section white space gap issue
Fixed issue where background color did not apply to footer portion of Contact. Added Picture of myself in Introduction section.

--- a/styles/myHeaders.css
+++ b/styles/myHeaders.css
@@ -1,9 +1,9 @@
 .introduction {
-	height: 60%;
+	height: 80%;
 }
 
 .skills {
-	height: 40%;
+	height: 70%;
 }
 
 .projects {
@@ -32,6 +32,5 @@ a.nounderline:link {
 }
 
 #footer {
-	bottom: 0;
 	color: white;
 }
